--- a/package.json
+++ b/package.json
@@ -1,11 +1,35 @@
 {
   "name": "personal-website-2020",
+  "private": true,
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/KenG98/personal-website-2020.git",
   "author": "Ken Garber <kengarber98@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "lint": "eslint src/"
+  },
   "devDependencies": {
-    "gatsby-cli": "^2.11.11"
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "gatsby-cli": "^2.11.11",
+    "gatsby-plugin-eslint": "^2.0.8",
+    "prettier": "^2.0.5"
+  },
+  "dependencies": {
+    "gatsby": "^2.21.21",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
