--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "prettier": "^2.0.5"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.13",
     "gatsby": "^2.21.21",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "typeface-roboto": "^0.0.75"
   }
 }
