--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.13",
+    "clipboard-copy": "^3.1.0",
     "gatsby": "^2.21.21",
+    "gatsby-plugin-flow": "^1.3.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "typeface-roboto": "^0.0.75"
